# ewms-workflow-management-service

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
Apis/: DefaultApi.md
Docs/: README.md
Models/: TaskDirectiveObject.md  TaskforceObject.md  TaskforceObject_condor_config.md  TaskforceObject_container_config.md  TaskforceObject_n_workers.md  TaskforceObject_submit_dict_value.md  TaskforceObject_worker_config.md  TaskforceUUIDObject.md  _schema_openapi_get_400_response.md  _task_directive_post_request.md  _task_directives_find_post_200_response.md  _taskforce_tms_action_pending_starter_get_200_response.md  _taskforces_find_post_200_response.md  _taskforces_tms_report_post_200_response.md  _taskforces_tms_report_post_207_response.md  _taskforces_tms_report_post_400_response.md  _taskforces_tms_report_post_request.md  _taskforces_tms_snapshot_post_request.md  _taskforces_tms_status_post_200_response.md  _taskforces_tms_status_post_207_response.md  _tms_taskforce_condor_complete__taskforce_uuid__post_request.md  _tms_taskforce_pending_get_200_response.md  _tms_taskforce_pending_get_400_response.md  _tms_taskforces_find_post_200_response.md  _tms_taskforces_report_post_200_response.md  _tms_taskforces_report_post_207_response.md  _tms_taskforces_report_post_request.md  container_config.md  container_config_environment_value.md  n_workers.md  worker_config.md  worker_config_worker_disk_bytes.md
examples/: README.md  do_task.py  oneliner_request_workflow.sh  request_task.py  request_workflow.py  requirements.txt
(+226 files in other folders)
