# pyproject.toml

[project]
dependencies = [
  "aiocache",
  "jsonschema",
  "motor",
  "openapi-core",
  "wipac-dev-tools",
  "wipac-rest-tools",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "nest-asyncio",
  "flask",
  "pytest-reverse",
]
mypy = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "nest-asyncio",
  "flask",
  "pytest-reverse",
]
